--- a/clase_4/css/style.css
+++ b/clase_4/css/style.css
@@ -34,26 +34,29 @@ h1 {
 .navegacion {
     font-weight: 700;
     font-size: 1rem;
-    padding: 2rem;
+    padding: 1px;
     background-color: aliceblue;
 }
 
 
 .menu {
     list-style: none;
+      
 
 }
 
-.menu li {
+.menu > li {
     display: inline-block;
-    
     position:relative;
+    padding: 1rem;
     
 }
 
 .sub_doc {
     position: absolute;
     display: none;
+    padding: 10px;
+    background-color: rgb(4, 88, 60);
 }
 
 
@@ -108,8 +111,12 @@ h1 {
     height: 50px;
 }
 
-footer ol il {
+.pie ul li {
     margin: 10px;
+    display: inline-block;
+    padding: 1rem;
+    text-decoration: none;
+
 }
 
 .img_small {
